# Sib2AE

./: .gitignore  .mcp.json  CLAUDE.md  FINALLY.md  FluidR3_GM.sf2  HELSINKI-NOTEHEAD-CODES.md  ONBOARDING.md  QUICKSTART.md  README.md  SIBELIUS-SVG-NOTEHEAD-EXTRACTION.md  analyze_helsinki_unicode.py  debug_classify.py  debug_elements.py  debug_noteheads.py  debug_staff.py  debug_svg_elements.py  debug_text_extraction.py  debug_transform.py  gui_settings.json  individual_noteheads_creator.py  launch_gui.py  launch_gui.sh  main.py  migrate_to_master_output.py  note_coordinator.py  pyproject.toml  sib2ae_gui.py  staff_barlines_extractor.py  svg_viewer_settings.json  svg_viewer_webview.py  svg_viewer_webview_settings.json  svg_viewer_window.py  truly_universal_noteheads_extractor.py  universal_noteheads_extractor.py  universal_orchestrator.py  xml_based_instrument_separator.py
.claude/: orchestration-examples.md
Audio Separators/: audio_to_keyframes.py  audio_to_keyframes_fast.py  midi_note_separator.py  midi_to_audio_renderer.py  midi_to_audio_renderer_fast.py
Base/: SS 9.musicxml  Saint-Saens Trio No 2_master_timing.json
Brain/: README.md  universal_orchestrator.py
Extensions/: ae-plugin-development-reference-2025.md
Implementation Summaries/: FINALLY.md  INSTRUMENT-SEPARATOR-IMPLEMENTATION.md  SIB2AE-COMPLETE-IMPLEMENTATION.md
PRPs/: 18mnsynchronized-music-animation-system.md  5mn-synchronized-music-animation-system.md  9mn midi-svg-synchronization-system.md  story_smart-verbose-shell-output.md
Separators/: truly_universal_noteheads_subtractor.py
(+216 files in other folders)
